[package]
name = "escrow"
version = "0.1.0"
description = "Cosmwasm escrow smart contract"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
readme = "README.md"
license = "MIT or Apache 2.0"
repository = "https://github.com/nostandard/cosmwasm-contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
cw-utils = "1.0"
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.20"
